# timecard

./: .env  .gitignore  Cargo.toml  Notes.md  README.md  RELEASE_NOTES.md  ToDo.md  example_env  test.db  timecard.sqlite
backend/: Cargo.toml  README.md  RELEASE_NOTES.md
backend/src/: api.rs  db.rs  lib.rs
frontend/: Cargo.toml  LICENSE_MIT
frontend/src/: app.rs  lib.rs
migrations/2019-12-06-042204_create_entries/: up.sql
migrations/2019-12-12-052724_create_projects/: up.sql
src/: api.rs  cli.rs  db.rs  lib.rs  main.rs  router.rs  schema.rs  telemetry.rs
