[package]
name = "timecard"
version = "0.4.1"
authors = ["Samuel J Vanderwaal <samuel.vanderwaal@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
chrono = "0.4.10"
# lazy_static = "1.4.0"
prettytable-rs = "0.8.0"
# indexmap = "1.3.0"
dotenv = "0.15.0"
sqlx = { version = "0.3.5", features = ["sqlite", "macros"] }
anyhow = "1.0.31"
warp = "0.2.3"
tokio = { version = "0.2.21", features = ["macros"] }
rand = "0.7.3"
