[package]
name = "timecard"
version = "0.5.0"
authors = ["Samuel J Vanderwaal <samuel.vanderwaal@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "cli"
path = "src/cli/bin/main.rs"

[dependencies]
clap = "3.0.0-beta.1"
chrono = "0.4.10"
prettytable-rs = "0.8.0"
dotenv = "0.15.0"
sqlx = { version = "0.3.5", features = ["sqlite", "macros"] }
anyhow = "1.0.31"
warp = "0.2.3"
tokio = { version = "0.2.21", features = ["macros"] }
rand = "0.7.3"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
fake = { version = "2.2.2", features = ["derive", "http"] }
bytes = "0.5.4"
lazy_static = "1.4.0"
indexmap = "1.4.0"
reqwest = { version = "0.10.7", features = ["json"] }
http = "0.2.1"
