[package]
name = "timecard"
version = "0.4.0"
authors = ["Samuel J Vanderwaal <samuel.vanderwaal@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.10"
clap = "2.33.0"
dotenv = "0.15.0"
indexmap = "1.3.1"
lazy_static = "1.4.0"
prettytable-rs = "0.8.0"
rusqlite = "0.21.0"
tokio = { version = "0.2.11", features = ["macros"] }
warp = "0.2.1"
serde = { version = "1.0.104", features = ["derive"] }
r2d2 = "0.8.8"
r2d2_sqlite = "0.14.0"
